fix: allow overflow-x on map on mobile

--- a/sass/map/_container.scss
+++ b/sass/map/_container.scss
@@ -1,10 +1,18 @@
 .map {
+    height: 100vh;
+    overflow-x: auto;
+    scroll-behavior: initial;
+    user-select: none;
+    cursor: grab;
     background-color: $primaryDark;
     background-image: url('../img/map-bg.png');
     background-attachment: fixed;
     background-position: center;
     font-family: $fontMain, serif;
-    scroll-behavior: initial;
-    user-select: none;
-    cursor: grab;
+
+    @media #{$minMD} {
+        height: calc(100vh - #{$navHeight});
+        padding-top: 0;
+        overflow-x: hidden;
+    }
 }
